srcs/yaml_files/grafana.yml
apiVersion: v1
kind: Service
metadata:
    name: grafana
    labels:
      app: grafana
spec:
    ports:
    - port: 3000
      targetPort: 3000
    selector:
      app: grafana
    type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: grafana
    labels:
      app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
              name: grafana
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources/influxdb-datasource.yml
              name: grafana-config-volume
              readOnly: true
              subPath: influxdb-datasource.yml
            - mountPath: /etc/grafana/provisioning/dashboards/grafana-dashboard-provider.yml
              name: grafana-config-volume
              readOnly: true
              subPath: grafana-dashboard-provider.yml
            - mountPath: /var/lib/grafana/dashboards/grafana-dashboard.json
              name: grafana-config-volume
              readOnly: true
              subPath: grafana-dashboard.json
            - mountPath: /var/lib/grafana/dashboards/influxdb-dashboard.json
              name: grafana-config-volume
              readOnly: true
              subPath: influxdb-dashboard.json
            - mountPath: /var/lib/grafana/dashboards/mysql-dashboard.json
              name: grafana-config-volume
              readOnly: true
              subPath: mysql-dashboard.json
            - mountPath: /var/lib/grafana/dashboards/nginx-dashboard.json
              name: grafana-config-volume
              readOnly: true
              subPath: nginx-dashboard.json
            - mountPath: /var/lib/grafana/dashboards/phpmyadmin-dashboard.json
              name: grafana-config-volume
              readOnly: true
              subPath: phpmyadmin-dashboard.json
            - mountPath: /var/lib/grafana/dashboards/telegraf-dashboard.json
              name: grafana-config-volume
              readOnly: true
              subPath: telegraf-dashboard.json
            - mountPath: /var/lib/grafana/dashboards/wordpress-dashboard.json
              name: grafana-config-volume
              readOnly: true
              subPath: wordpress-dashboard.json
      volumes:
      - name: grafana-config-volume
        configMap:
          name: grafana-config
