srcs/yaml_files/influxdb.yml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  ports:
    - port: 8086
  selector:
    app: influxdb
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb_rbakker
          imagePullPolicy: Never
          ports:
            - containerPort: 8086
              name: influxdb
          volumeMounts:
            - name: influxdb-pv
              mountPath: /var/lib/influxdb
      volumes:
        - name: influxdb-pv
          persistentVolumeClaim:
            claimName: influxdb-pvc
