srcs/yaml_files/phpmyadmin.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    nodePort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - envFrom:
        - secretRef:
              name: system-secret        
        name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
