srcs/yaml_files/telegraf.yml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    app: telegraf
spec:
  ports:
    - port: 8125
      targetPort: 8125
      protocol: UDP
  selector:
    app: telegraf

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  labels:
    app: telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
        - name: telegraf
          image: telegraf_rbakker
          imagePullPolicy: Never
          volumeMounts:
            - name: telegraf-config-volume
              mountPath: etc/telegraf/telegraf.conf
              subPath: telegraf.conf
            - name: docker-socket
              mountPath: /var/run/docker.sock
      volumes:
      - name: telegraf-config-volume
        configMap:
          name: telegraf-config
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
