srcs/yaml_files/wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 5050
    targetPort: 80
  selector:
    app: wordpress

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - envFrom:
        - secretRef:
              name: system-secret
        name: wordpress
        image: wordpress:4.8-apache
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
