srcs/yaml_files/ingress-deployment.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: nginx-server
          servicePort: 80
